--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "tidl_alg_int.h": "c",
-        "limits": "c"
+        "limits": "c",
+        "stdio.h": "c"
     }
 }
